sfdx-source/main/default/objects/VCC_Heartbeat_Template_Run__c/VCC_Heartbeat_Template_Run__c.object-meta.xml
<CustomObject>
    <description>The object stores the results of a API response from a scheduled job of a Heartbeat Template (parent object)</description>
    <label>Heartbeat Template Run</label>
    <nameField>
        <displayFormat>RUN-{000000000}</displayFormat>
        <label>Heartbeat Template Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Heartbeat Template Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>