sfdx-source/main/default/objects/VCC_Heartbeat_Template_Run__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>