sfdx-source/main/default/objects/VCC_Heartbeat_Template_Run__c/fields/Heartbeat_Template__c.field-meta.xml
<CustomField>
    <fullName>Heartbeat_Template__c</fullName>
    <label>Heartbeat Template</label>
    <referenceTo>VCC_Heartbeat_Template__c</referenceTo>
    <relationshipLabel>Heartbeat Template Runs</relationshipLabel>
    <relationshipName>Heartbeat_Template_Runs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>