sfdx-source/main/default/objects/VCC_Heartbeat_Template_Run__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>