sfdx-source/main/default/objects/VCC_Heartbeat_Template_Run__c/fields/Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>