sfdx-source/main/default/objects/VCC_Heartbeat_Template_Run__c/fields/Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By__c</fullName>
    <label>Triggered By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Run</fullName>
            </value>
            <value>
                <fullName>AutoRun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>